--- a/index.ipynb
+++ b/index.ipynb
@@ -177,23 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ART VANDELAY'"
+       "'CEO'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "title = \"Ceo\" # 'CEO'\n",
-    "title.upp"
+    "title.upper ()"
    ]
   },
   {
