--- a/index.ipynb
+++ b/index.ipynb
@@ -205,11 +205,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-8164337a942d>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-8164337a942d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    email.endswith (.com)\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
     "email.endswith (.com)"
