Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
    "outputs": [],
    "source": [
     "'vandelay.com' # 'www.vandelay.com'\n",
-    "name.this "
+    "name.this is teh start('www')"
    ]
   },
   {
