--- a/index.ipynb
+++ b/index.ipynb
@@ -233,15 +233,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-af6f2e9b5914>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-af6f2e9b5914>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    name.this is teh start('www.')\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "'vandelay.com' # 'www.vandelay.com'\n",
-    "name.this is teh start('www')"
+    "name.this is teh start('www.')"
    ]
   },
   {
