--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
    ],
    "source": [
     "'vandelay.com' # 'www.vandelay.com'\n",
-    "name.this is the start ('www.')"
+    "\"www.\""
    ]
   },
   {
