--- a/index.ipynb
+++ b/index.ipynb
@@ -233,23 +233,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-6b7e74f1102d>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-15-4469419dcbe5>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-6b7e74f1102d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    name.this is the start ('www.')\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-4469419dcbe5>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"www.\" + name.()\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "'vandelay.com' # 'www.vandelay.com'\n",
-    "\"www.\" + name"
+    "\"www.\" + name.()"
    ]
   },
   {
