Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,23 +233,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to operator (<ipython-input-17-bea368ba44cd>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-bea368ba44cd>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"www.\" + name = ()\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to operator\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'www.art vandelay'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "'vandelay.com' # 'www.vandelay.com'\n",
-    "\"www.\" + name = ()"
+    "\"www.\" + name"
    ]
   },
   {
