Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,25 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'www.art vandelay'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'\n",
-    "\"www.\" + name"
+    "email = 'vandelay.com' # 'www.vandelay.com'\n",
+    "\"www.\" + email"
    ]
   },
   {
