--- a/index.ipynb
+++ b/index.ipynb
@@ -233,11 +233,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'www.vandelay.com'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "email = 'vandelay.com' # 'www.vandelay.com'\n",
     "\"www.\" + email"
@@ -265,7 +276,7 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 728"
+    "\"7285553334\" # 728\n"
    ]
   },
   {
